fix: docker image build error

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,6 +6,9 @@ RUN apk update && \
 	apk add build-base && \
 	apk add linux-headers && \
 	apk add yaml-dev && \
+	pip install --upgrade pip && \
+	pip install Cython && \
+	pip install numpy && \
 	pip install -e ".[test]" && \
 	rm /setup.py /setup.cfg
 
