--- a/openfisca_barcelona/tests/benefits/HG-077-02.yaml
+++ b/openfisca_barcelona/tests/benefits/HG-077-02.yaml
@@ -1,4 +1,4 @@
-- name: Persona amb tots els requeriments de HA-002 reb l'ajuda
+- name: Persona amb tots els requeriments de HG-077-02 rep l'ajuda
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
@@ -24,8 +24,8 @@
         titular_contracte_de_lloguer: true
         municipi_empadronament: barcelona
   output:
-    HA_002: [200]
-- name: Persona amb massa ingressos no reb l'ajuda HA-002
+    HG_077_02: [200]
+- name: Persona amb massa ingressos no reb l'ajuda HG-077-02
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
@@ -57,4 +57,4 @@
         titular_contracte_de_lloguer: true
         municipi_empadronament: barcelona
   output:
-    HA_002: [0]
+    HG_077_02: [0]
