--- a/openfisca_barcelona/tests/benefits/HG-077-03.yaml
+++ b/openfisca_barcelona/tests/benefits/HG-077-03.yaml
@@ -1,4 +1,4 @@
-- name: Persona amb tots els requeriments de HA-003 reb l'ajuda
+- name: Persona amb tots els requeriments de HG-077-03 reb l'ajuda
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
@@ -25,4 +25,4 @@
         titular_hipoteca: true
         municipi_empadronament: altres
   output:
-    HA_003: [2000]
+    HG_077_03: [2000]
