--- a/openfisca_barcelona/tests/benefits/HG-077-04.yaml
+++ b/openfisca_barcelona/tests/benefits/HG-077-04.yaml
@@ -1,4 +1,4 @@
-- name: Persona amb tots els requeriments de HA-004 reb l'ajuda
+- name: Persona amb tots els requeriments de HG-077-04 reb l'ajuda
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
@@ -25,4 +25,4 @@
         titular_contracte_de_lloguer: true
         municipi_empadronament: altres
   output:
-    HA_004: [2000]
+    HG_077_04: [2000]
