--- a/openfisca_barcelona/tests/benefits/GE-051-01.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-01.yaml
@@ -1,4 +1,4 @@
-- name: Persona amb tots els condicionants reb l'ajuda
+- name: Persona amb tots els condicionants rep l'ajuda
   description: RAI 1 - Ajuda discapacitats 33% o superior
   period: 2017-01
   absolute_error_margin: false
@@ -8,6 +8,8 @@
     unitat_de_convivencia:
       persones_que_conviuen: [adult1]
     familia_fins_a_segon_grau:
+      familiars: [adult1]
+    familia_rai:
       familiars: [adult1]
     persones:
       adult1:
@@ -36,6 +38,8 @@
     unitat_de_convivencia:
       persones_que_conviuen: [adult1, adult2]
     familia_fins_a_segon_grau:
+      familiars: [adult1, adult2]
+    familia_rai:
       familiars: [adult1, adult2]
     persones:
       adult1:
@@ -79,6 +83,8 @@
       persones_que_conviuen: [adult1]
     familia_fins_a_segon_grau:
       familiars: [adult1]
+    familia_rai:
+      familiars: [adult1]
     persones:
       adult1:
         ingressos_bruts:
@@ -106,6 +112,8 @@
       persones_que_conviuen: [adult1]
     familia_fins_a_segon_grau:
       familiars: [adult1]
+    familia_rai:
+      familiars: [adult1]
     persones:
       adult1:
         ingressos_bruts:
@@ -133,6 +141,8 @@
       persones_que_conviuen: [adult1]
     familia_fins_a_segon_grau:
       familiars: [adult1]
+    familia_rai:
+      familiars: [adult1]
     persones:
       adult1:
         ingressos_bruts:
@@ -159,6 +169,8 @@
     unitat_de_convivencia:
       persones_que_conviuen: [adult1]
     familia_fins_a_segon_grau:
+      familiars: [adult1]
+    familia_rai:
       familiars: [adult1]
     persones:
       adult1:
@@ -187,6 +199,8 @@
       persones_que_conviuen: [adult1]
     familia_fins_a_segon_grau:
       familiars: [adult1]
+    familia_rai:
+      familiars: [adult1]
     persones:
       adult1:
         ingressos_bruts:
@@ -213,6 +227,8 @@
     unitat_de_convivencia:
       persones_que_conviuen: [adult1]
     familia_fins_a_segon_grau:
+      familiars: [adult1]
+    familia_rai:
       familiars: [adult1]
     persones:
       adult1:
@@ -241,6 +257,8 @@
       persones_que_conviuen: [adult1]
     familia_fins_a_segon_grau:
       familiars: [adult1]
+    familia_rai:
+      familiars: [adult1]
     persones:
       adult1:
         ingressos_bruts:
@@ -267,6 +285,8 @@
     unitat_de_convivencia:
       persones_que_conviuen: [adult1]
     familia_fins_a_segon_grau:
+      familiars: [adult1]
+    familia_rai:
       familiars: [adult1]
     persones:
       adult1:
@@ -295,6 +315,8 @@
       persones_que_conviuen: [adult1]
     familia_fins_a_segon_grau:
       familiars: [adult1]
+    familia_rai:
+      familiars: [adult1]
     persones:
       adult1:
         ingressos_bruts:
@@ -321,6 +343,8 @@
     unitat_de_convivencia:
       persones_que_conviuen: [adult1]
     familia_fins_a_segon_grau:
+      familiars: [adult1]
+    familia_rai:
       familiars: [adult1]
     persones:
       adult1:
@@ -349,6 +373,8 @@
       persones_que_conviuen: [adult1]
     familia_fins_a_segon_grau:
       familiars: [adult1]
+    familia_rai:
+      familiars: [adult1]
     persones:
       adult1:
         data_naixement: '1961-01-15'
@@ -376,6 +402,8 @@
     unitat_de_convivencia:
       persones_que_conviuen: [adult1]
     familia_fins_a_segon_grau:
+      familiars: [adult1]
+    familia_rai: 
       familiars: [adult1]
     persones:
       adult1:
