--- a/openfisca_barcelona/tests/benefits/GE-051-04.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-04.yaml
@@ -9,6 +9,8 @@
       persones_que_conviuen: [adult1]
     familia_fins_a_segon_grau:
       familiars: [adult1]
+    familia_rai:
+      familiars: [adult1]
     persones:
       adult1:
         data_naixement: '1961-01-15'
@@ -37,11 +39,13 @@
       persones_que_conviuen: [adult1]
     familia_fins_a_segon_grau:
       familiars: [adult1]
+    familia_rai:
+      familiars: [adult1]
     persones:
       adult1:
         data_naixement: '1961-01-15'
         ingressos_bruts:
-          2016: 6000
+          2020: 8500
         situacio_laboral: aturat
         grau_discapacitat: 34
         ha_esgotat_prestacio_de_desocupacio: true
@@ -54,3 +58,178 @@
         beneficiari_ajuts_per_violencia_de_genere: false
   output:
     GE_051_04_mensual: [451.92]
+- name: Persona amb sou per damunt del limit NO rep l'ajuda al 2021
+  description: RAI 1 - Ajuda discapacitats 33% o superior
+  period: 2021-02
+  absolute_error_margin: false
+  input:
+    familia:
+      sustentadors_i_custodia: [adult1]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1]
+    familia_fins_a_segon_grau:
+      familiars: [adult1]
+    familia_rai:
+      familiars: [adult1]
+    persones:
+      adult1:
+        data_naixement: '1961-01-15'
+        ingressos_bruts:
+          2020: 8600
+        situacio_laboral: aturat
+        grau_discapacitat: 34
+        ha_esgotat_prestacio_de_desocupacio: true
+        inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+  output:
+    GE_051_04_mensual: [0]
+- name: Unitat de 2 persones amb ingressos totals per damunt del limit NO rep l'ajuda al 2021
+  description: RAI 1 - Ajuda discapacitats 33% o superior
+  period: 2021-02
+  absolute_error_margin: false
+  input:
+    familia:
+      sustentadors_i_custodia: [adult1, adult2]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1,adult2]
+    familia_fins_a_segon_grau:
+      familiars: [adult1,adult2]
+    familia_rai:
+      familiars: [adult1, adult2]
+    persones:
+      adult1:
+        data_naixement: '1961-01-15'
+        ingressos_bruts:
+          2020: 20000
+        situacio_laboral: aturat
+        grau_discapacitat: 34
+        ha_esgotat_prestacio_de_desocupacio: true
+        inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+      adult2:
+        data_naixement: '1963-01-15'
+        ingressos_bruts:
+          2020: 600
+        situacio_laboral: aturat
+        grau_discapacitat: 10
+        ha_esgotat_prestacio_de_desocupacio: true
+        inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+  output:
+    GE_051_04_mensual: [0, 0]
+- name: Unitat de 2 persones. la primera persona amb tots els condicionants rep l'ajuda al 2021
+  description: RAI 1 - Ajuda discapacitats 33% o superior
+  period: 2021-02
+  absolute_error_margin: false
+  input:
+    familia:
+      sustentadors_i_custodia: [adult1, adult2]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1,adult2]
+    familia_fins_a_segon_grau:
+      familiars: [adult1,adult2]
+    familia_rai:
+      familiars: [adult1, adult2]
+    persones:
+      adult1:
+        data_naixement: '1961-01-15'
+        ingressos_bruts:
+          2020: 200
+        situacio_laboral: aturat
+        grau_discapacitat: 34
+        ha_esgotat_prestacio_de_desocupacio: true
+        inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+      adult2:
+        data_naixement: '1963-01-15'
+        ingressos_bruts:
+          2020: 600
+        situacio_laboral: treball_compte_propi
+        grau_discapacitat: 10
+        ha_esgotat_prestacio_de_desocupacio: true
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: true
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+  output:
+    GE_051_04_mensual: [451.92, 0]
+- name: Unitat de 3 persones amb ingressos totals per damunt del limit NO rep l'ajuda al 2021
+  description: RAI 1 - Ajuda discapacitats 33% o superior
+  period: 2021-02
+  absolute_error_margin: false
+  input:
+    familia:
+      sustentadors_i_custodia: [adult1, adult2]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1, adult2, adult3]
+    familia_fins_a_segon_grau:
+      familiars: [adult1, adult2, adult3]
+    familia_rai:
+      familiars: [adult1, adult2]
+    persones:
+      adult1:
+        data_naixement: '1961-01-15'
+        ingressos_bruts:
+          2020: 20000
+        situacio_laboral: aturat
+        grau_discapacitat: 34
+        ha_esgotat_prestacio_de_desocupacio: true
+        inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+      adult2:
+        data_naixement: '1963-01-15'
+        ingressos_bruts:
+          2020: 600
+        situacio_laboral: aturat
+        grau_discapacitat: 10
+        ha_esgotat_prestacio_de_desocupacio: true
+        inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+      adult3:
+        data_naixement: '1962-01-15'
+        ingressos_bruts:
+          2020: 600
+        situacio_laboral: aturat
+        grau_discapacitat: 10
+        ha_esgotat_prestacio_de_desocupacio: true
+        inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+  output:
+    GE_051_04_mensual: [0, 0, 451.92]
