--- a/openfisca_barcelona/tests/benefits/GG-270.yaml
+++ b/openfisca_barcelona/tests/benefits/GG-270.yaml
@@ -1,5 +1,5 @@
 - name: Persona amb tots els condicionants reb l'ajuda
-  description: Ajuda lloguer just
+  description: Renda garantida ciutadana
   period: 2017-01
   absolute_error_margin: false
   input:
@@ -26,7 +26,7 @@
   output:
     GG_270_mensual: [314]
 - name: Persona amb ingressos superiors al limit no reb l'ajuda
-  description: Ajuda lloguer just
+  description: Renda garantida ciutadana
   period: 2017-01
   absolute_error_margin: false
   input:
@@ -53,7 +53,7 @@
   output:
     GG_270_mensual: [0]
 - name: Persona que no ha viscut els ultims 24 mesos a Catalunya no reb l'ajuda
-  description: Ajuda lloguer just
+  description: Renda garantida ciutadana
   period: 2017-01
   absolute_error_margin: false
   input:
@@ -80,7 +80,7 @@
   output:
     GG_270_mensual: [0]
 - name: Persona que te una ajuda residencial no reb l'ajuda
-  description: Ajuda lloguer just
+  description: Renda garantida ciutadana
   period: 2017-01
   absolute_error_margin: false
   input:
@@ -107,7 +107,7 @@
   output:
     GG_270_mensual: [0]
 - name: Persona que que és un pres no reb l'ajuda
-  description: Ajuda lloguer just
+  description: Renda garantida ciutadana
   period: 2017-01
   absolute_error_margin: false
   input:
@@ -134,7 +134,7 @@
   output:
     GG_270_mensual: [0]
 - name: Persona que va causar baixa voluntaria de la última feina no reb l'ajuda
-  description: Ajuda lloguer just
+  description: Renda garantida ciutadana
   period: 2017-01
   absolute_error_margin: false
   input:
@@ -161,7 +161,7 @@
   output:
     GG_270_mensual: [0]
 - name: Persona menor de 23 orfe de projenitors amb discapacitats a carrec reb l'ajuda
-  description: Ajuda lloguer just
+  description: Renda garantida ciutadana
   period: 2017-01
   absolute_error_margin: false
   input:
@@ -192,7 +192,7 @@
   output:
     GG_270_mensual: [661, 0]
 - name: Persona menor de 23 victima de violencia de genere reb l'ajuda
-  description: Ajuda lloguer just
+  description: Renda garantida ciutadana
   period: 2017-01
   absolute_error_margin: false
   input:
@@ -219,7 +219,7 @@
   output:
     GG_270_mensual: [314]
 - name: Persona menor de 23 orfena dels dos progenitors reb l'ajuda
-  description: Ajuda lloguer just
+  description: Renda garantida ciutadana
   period: 2017-01
   absolute_error_margin: false
   input:
@@ -246,7 +246,7 @@
   output:
     GG_270_mensual: [314]
 - name: Persona no empadronada i sense permis pero divorciada de familia reagrupada reb l'ajuda
-  description: Ajuda lloguer just
+  description: Renda garantida ciutadana
   period: 2017-01
   absolute_error_margin: false
   input:
@@ -278,7 +278,7 @@
   output:
     GG_270_mensual: [586, 0]
 - name: Familia monoparental amb contracte a temps parcial no inscrita al SOC reb l'ajuda
-  description: Ajuda lloguer just
+  description: Renda garantida ciutadana
   period: 2017-01
   absolute_error_margin: false
   input:
@@ -307,8 +307,41 @@
         data_naixement: '2008-03-15'
   output:
     GG_270_mensual: [661, 0]
+- name: Familia nombrosa amb contracte a temps parcial reb l'ajuda
+  description: Renda garantida ciutadana
+  period: 2021-04
+  absolute_error_margin: false
+  input:
+    familia:
+      sustentadors_i_custodia: [adult]
+      altres_familiars: [fill1, fill2]
+    familia_nombrosa:
+      familiars: [adult, fill1, fill2]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult, fill1, fill2]
+    familia_fins_a_segon_grau:
+      familiars: [adult, fill1, fill2]
+    persones:
+      adult:
+        data_naixement: '1980-03-15'
+        ingressos_bruts_ultims_sis_mesos: 1500
+        es_orfe_dels_dos_progenitors: false
+        es_victima_de_violencia_masclista: false
+        es_divorciada_de_familia_reagrupada: false
+        porta_dos_anys_o_mes_empadronat_a_catalunya: true
+        beneficiari_de_prestacio_residencial: false
+        ingressat_en_centre_penitenciari: false
+        en_els_ultims_12_mesos_ha_fet_baixa_voluntaria_de_la_feina: false
+        inscrit_com_a_demandant_docupacio: false
+        situacio_laboral: treball_compte_daltri_jornada_parcial
+      fill1:
+        data_naixement: '2008-03-15'
+      fill2:
+        data_naixement: '2007-03-15'
+  output:
+    GG_270_mensual: [846, 0, 0]
 - name: Algorithm selects the person with a higher benefit
-  description: Ajuda lloguer just
+  description: Renda garantida ciutadana
   period: 2017-01
   absolute_error_margin: false
   input:
