--- a/openfisca_barcelona/parameters/benefits/GE051/llindars_ingressos.yaml
+++ b/openfisca_barcelona/parameters/benefits/GE051/llindars_ingressos.yaml
@@ -3,24 +3,30 @@ reference: openfisca
 1:
   values:
     2017-01-01:
-        value: 551.93
+      value: 551.93
     2021-02-01:
       value: 712.50
 2:
   values:
     2017-01-01:
-        value: 1103.86
+      value: 1103.86
     2021-02-01:
       value: 1425.00
 3:
   values:
     2017-01-01:
-        value: 1655.79
+      value: 1655.79
     2021-02-01:
       value: 2137.50
 4:
   values:
     2017-01-01:
-        value: 2207.72
+      value: 2207.72
     2021-02-01:
       value: 2850.00
+5_o_mes:
+  values:
+    2017-01-01:
+      value: 2759.65
+    2021-02-01:
+      value: 3562.50
