--- a/openfisca_barcelona/tests/benefits/HE-077-00.yaml
+++ b/openfisca_barcelona/tests/benefits/HE-077-00.yaml
@@ -1,6 +1,6 @@
-- name: Persona amb tots els requeriments de HE-077-00 rep l'ajuda
+- name: Persona amb sou per sobre del maxim NO rep l'ajuda
   description: Ajuda lloguer just
-  period: 2017-01
+  period: 2021-05
   absolute_error_margin: false
   input:
     familia:
@@ -18,16 +18,43 @@
     persones:
       adult:
         ingressos_bruts:
-          2016: 6348
+          2020: 11290
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: barcelona
+  output:
+    HE_077_00: [0]
+- name: Persona amb tots els requeriments de HE-077-00 rep l'ajuda
+  description: Ajuda lloguer just
+  period: 2021-05
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_del_lloguer: 500
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      zona_de_lhabitatge: zona_a
+      demarcacio_de_lhabitatge: barcelona_ciutat
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        ingressos_bruts:
+          2020: 11279
         temps_empadronat_habitatge_actual: menys_nou_mesos
         tipus_document_identitat: DNI
         titular_contracte_de_lloguer: true
         municipi_empadronament: barcelona
   output:
     HE_077_00: [200]
-- name: Familia nombrosa amb tots els requeriments de HE-077-00 rep l'ajuda
+- name: Familia amb alguna persona amb discapacitat i amb tots els requeriments de HE-077-00 rep l'ajuda
   description: Ajuda lloguer just
-  period: 2017-01
+  period: 2021-05
   absolute_error_margin: false
   input:
     familia:
@@ -46,21 +73,22 @@
     persones:
       adult:
         ingressos_bruts:
-          2016: 6348
+          2020: 6348
         temps_empadronat_habitatge_actual: menys_nou_mesos
         tipus_document_identitat: DNI
         titular_contracte_de_lloguer: true
         municipi_empadronament: barcelona
       adult2:
         ingressos_bruts:
-          2016: 6348
+          2020: 6348
         temps_empadronat_habitatge_actual: menys_nou_mesos
         tipus_document_identitat: DNI
         municipi_empadronament: barcelona
+        grau_discapacitat: 10
       menor:
         edat: 12
         ingressos_bruts:
-          2016: 0
+          2020: 0
         temps_empadronat_habitatge_actual: menys_nou_mesos
         tipus_document_identitat: DNI
         titular_contracte_de_lloguer: true
@@ -68,7 +96,7 @@
       menor2:
         edat: 12
         ingressos_bruts:
-          2016: 0
+          2020: 0
         temps_empadronat_habitatge_actual: menys_nou_mesos
         tipus_document_identitat: DNI
         titular_contracte_de_lloguer: true
@@ -76,7 +104,7 @@
       menor3:
         edat: 12
         ingressos_bruts:
-          2016: 0
+          2020: 0
         temps_empadronat_habitatge_actual: menys_nou_mesos
         tipus_document_identitat: DNI
         titular_contracte_de_lloguer: true
@@ -85,7 +113,7 @@
     HE_077_00: [200]
 - name: Persona amb tots els requeriments de HE-077-00 i lloguer sobre llindar NO rep l'ajuda
   description: Ajuda lloguer just
-  period: 2017-01
+  period: 2021-05
   absolute_error_margin: false
   input:
     familia:
@@ -103,22 +131,22 @@
     persones:
       adult:
         ingressos_bruts:
-          2016: 6348
+          2020: 6348
         temps_empadronat_habitatge_actual: menys_nou_mesos
         tipus_document_identitat: DNI
         titular_contracte_de_lloguer: true
         municipi_empadronament: barcelona
       adult2:
         ingressos_bruts:
-          2016: 6348
+          2020: 6348
         temps_empadronat_habitatge_actual: menys_nou_mesos
         tipus_document_identitat: DNI
         municipi_empadronament: barcelona
   output:
     HE_077_00: [0]
-- name: Familia nombrosa amb discapacitat
+- name: Familia amb discapacitat i lloguer per sobre del llindar NO rep ajuda
   description: Ajuda lloguer just
-  period: 2017-01
+  period: 2021-05
   absolute_error_margin: false
   input:
     familia:
@@ -131,7 +159,7 @@
       persones_que_conviuen: [adult1, adult2, menor1, menor2]
       codi_postal_habitatge: 08003
       demarcacio_de_lhabitatge: barcelona_ciutat
-      import_del_lloguer: 700
+      import_del_lloguer: 901
       zona_de_lhabitatge: zona_a
     familia_fins_a_segon_grau:
       familiars: [adult1, adult2, menor1, menor2]
@@ -146,14 +174,13 @@
         ha_treballat_a_l_estranger_6_mesos: true
         ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
         ingressos_bruts:
-          2016: 3000
+          2020: 3000
         ingressos_per_pnc:
-          2016: 1000
+          2020: 1000
         inscrit_com_a_demandant_docupacio: true
         inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
         municipi_empadronament: barcelona
-        tipus_document_identitat:
-          "2017-01": DNI
+        tipus_document_identitat: DNI
         victima_violencia_domestica: true
         titular_contracte_de_lloguer: true
         temps_empadronat_habitatge_actual: nou_mesos_o_mes
@@ -167,13 +194,13 @@
         ha_treballat_a_l_estranger_6_mesos: true
         ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
         ingressos_bruts:
-          2016: 3000
+          2020: 3000
         ingressos_per_pnc:
-          2016: 1000
+          2020: 1000
         inscrit_com_a_demandant_docupacio:
-          "2017-01": true
+          "2021-05": true
         inscrit_com_a_demandant_docupacio_mes_de_12_mesos:
-          "2017-01": true
+          "2021-05": true
         municipi_empadronament: barcelona
         percep_prestacions_incompatibles_amb_la_feina: true
         porta_dos_anys_o_mes_empadronat_a_catalunya: true
@@ -192,9 +219,9 @@
         ha_treballat_a_l_estranger_6_mesos: true
         ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
         ingressos_bruts:
-          2016: 3000
+          2020: 3000
         ingressos_per_pnc:
-          2016: 1000
+          2020: 1000
         inscrit_com_a_demandant_docupacio: true
         inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
         municipi_empadronament: barcelona
@@ -214,9 +241,9 @@
         ha_treballat_a_l_estranger_6_mesos: true
         ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
         ingressos_bruts:
-          2016: 3000
+          2020: 3000
         ingressos_per_pnc:
-          2016: 1000
+          2020: 1000
         inscrit_com_a_demandant_docupacio: true
         inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
         municipi_empadronament: barcelona
@@ -227,4 +254,4 @@
         tipus_document_identitat: DNI
         victima_violencia_domestica: true
   output:
-    HE_077_00: [200]
+    HE_077_00: [0]
