--- a/openfisca_barcelona/parameters/benefits/GA246/llindars_ingressos.yaml
+++ b/openfisca_barcelona/parameters/benefits/GA246/llindars_ingressos.yaml
@@ -6,32 +6,48 @@ gratuita:
     values:
       2017-01-01:
         value: 8271.55
+      2021-05-01:
+        value: 8699.46
   2:
     values:
       2017-01-01:
         value: 16543.10
+      2021-05-01:
+        value: 17398.92
   3:
     values:
       2017-01-01:
         value: 24814.65
+      2021-05-01:
+        value: 26098.38
   4:
     values:
       2017-01-01:
         value: 33086.20
+      2021-05-01:
+        value: 34797.84
 reduida:
   1:
     values:
       2017-01-01:
         value: 16543.10
+      2021-05-01:
+        value: 17398.92
   2:
     values:
       2017-01-01:
         value: 33086.20
+      2021-05-01:
+        value: 34797.84
   3:
     values:
       2017-01-01:
         value: 49629.30
+      2021-05-01:
+        value: 52196.76
   4:
     values:
       2017-01-01:
         value: 66172.40
+      2021-05-01:
+        value: 69595.68
