--- a/openfisca_barcelona/tests/benefits/GA-246-02.yaml
+++ b/openfisca_barcelona/tests/benefits/GA-246-02.yaml
@@ -350,3 +350,33 @@
   output:
     GA_246_01: [0, 0, 0]
     GA_246_02: [1, 1, 0]
+- name: Persona < 65 anys, discapacitat >= 33, empadronat a municipi atm, límit gratuïta < ingressos <= limit reduïda
+  description: GA_246_02 - Targeta Rosa (Reduïda)
+  period: 2017-01
+  absolute_error_margin: false
+  input:
+    familia:
+      sustentadors_i_custodia: [adult1]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1]
+    familia_fins_a_segon_grau:
+      familiars: [adult1]
+    persones:
+      adult1:
+        data_naixement: '1961-01-15'
+        ingressos_bruts:
+          2016: 9000
+        situacio_laboral: aturat
+        grau_discapacitat: 34
+        ha_esgotat_prestacio_de_desocupacio: true
+        inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+        municipi_empadronament: municipis_atm
+  output:
+    GA_246_01: [0]
+    GA_246_02: [1]
