feature: update conditions for HG_077_03

--- a/openfisca_barcelona/parameters/benefits/H/import_quota_hipoteca_maxim.yaml
+++ b/openfisca_barcelona/parameters/benefits/H/import_quota_hipoteca_maxim.yaml
@@ -3,9 +3,13 @@ HG_077_03:
     values:
       2017-01-01:
         value: 900
+      2021-11-01:
+        value: 800
   barcelona_provincia:
     values:
       2017-01-01:
+        value: 800
+      2021-11-01:
         value: 800
   desconeguda:
     values:
@@ -15,15 +19,23 @@ HG_077_03:
     values:
       2017-01-01:
         value: 600
+      2021-11-01:
+        value: 550
   lleida:
     values:
       2017-01-01:
         value: 550
+      2021-11-01:
+        value: 500
   terres_de_lebre:
     values:
       2017-01-01:
         value: 500
+      2021-11-01:
+        value: 400
   tarragona:
     values:
       2017-01-01:
         value: 600
+      2021-11-01:
+        value: 550
