--- a/openfisca_barcelona/tests/benefits/HG-077-03.yaml
+++ b/openfisca_barcelona/tests/benefits/HG-077-03.yaml
@@ -1,13 +1,42 @@
-- name: Persona amb tots els requeriments de HG-077-03 reb l'ajuda
+- name: Persona amb tots els requeriments de HG-077-03 rep l'ajuda
   description: Ajuda lloguer just
-  period: 2017-01
+  period: 2021-11
   absolute_error_margin: false
   input:
     familia:
       altres_persones: [adult]
     unitat_de_convivencia:
       persones_que_conviuen: [adult]
-      import_de_la_hipoteca: 400
+      import_de_la_hipoteca: 800
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      zona_de_lhabitatge: zona_a
+      ha_pagat_12_mesos_daquesta_hipoteca: true
+      demarcacio_de_lhabitatge: barcelona_ciutat
+      import_deute_en_el_pagament_hipoteca: 2000
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        ingressos_bruts_ultims_sis_mesos: 10600
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_hipoteca: true
+        municipi_empadronament: altres
+  output:
+    HG_077_03: [1]
+
+- name: Persona amb tots els requeriments de HG-077-03 fora de barcelona NO rep l'ajuda
+  description: Ajuda lloguer just
+  period: 2021-11
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_de_la_hipoteca: 800
       es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
       tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
       relacio_de_parentiu_amb_el_propietari: false
@@ -19,10 +48,97 @@
       familiars: [adult]
     persones:
       adult:
+        ingressos_bruts_ultims_sis_mesos: 10600
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_hipoteca: true
+        municipi_empadronament: altres
+  output:
+    HG_077_03: [0]
+
+- name: Persona amb hipoteca damunt del llindar NO rep l'ajuda
+  description: Ajuda lloguer just
+  period: 2021-11
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_de_la_hipoteca: 801
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      zona_de_lhabitatge: zona_a
+      ha_pagat_12_mesos_daquesta_hipoteca: true
+      demarcacio_de_lhabitatge: barcelona_ciutat
+      import_deute_en_el_pagament_hipoteca: 2000
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
         ingressos_bruts_ultims_sis_mesos: 3174
         temps_empadronat_habitatge_actual: menys_nou_mesos
         tipus_document_identitat: DNI
         titular_hipoteca: true
         municipi_empadronament: altres
   output:
-    HG_077_03: [2000]
+    HG_077_03: [0]
+
+- name: Persona amb ingressos damunt del llindar NO rep l'ajuda
+  description: Ajuda lloguer just
+  period: 2021-11
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_de_la_hipoteca: 800
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      zona_de_lhabitatge: zona_a
+      ha_pagat_12_mesos_daquesta_hipoteca: true
+      demarcacio_de_lhabitatge: barcelona_ciutat
+      import_deute_en_el_pagament_hipoteca: 2000
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        ingressos_bruts_ultims_sis_mesos: 10700
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_hipoteca: true
+        municipi_empadronament: altres
+  output:
+    HG_077_03: [0]
+
+- name: Persona amb tots els requeriments pero no ha pagat suficients quotes hipotecaries NO rep l'ajuda
+  description: Ajuda lloguer just
+  period: 2021-11
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_de_la_hipoteca: 800
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      zona_de_lhabitatge: zona_a
+      ha_pagat_12_mesos_daquesta_hipoteca: false
+      demarcacio_de_lhabitatge: barcelona_ciutat
+      import_deute_en_el_pagament_hipoteca: 2000
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        ingressos_bruts_ultims_sis_mesos: 10600
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_hipoteca: true
+        municipi_empadronament: altres
+  output:
+    HG_077_03: [0]
